@@ -7,7 +7,7 @@
 
 	New GTK-based configurator, usable using 'make gconfig'.
 
-	New packages: cgilua, copas, coxpcall, luafilesystem,
+	New packages: cgilua, copas, coxpcall, ffmpeg, luafilesystem,
 	luasocket, rings, wsapi, xavante
 
 	Updated/fixed packages: busybox, cdrkit, file, gawk,
@@ -19,6 +19,7 @@
 
 	Issues resolved (http://bugs.uclibc.org):
 
+	#401:  new package: ffmpeg
 	#1753: lmbench: convert to generic package infrastructure
 	#1771: Fakeroot and the target/generic/device_table.txt create bad...
 	#1807: LZMA 4.32.7, Required header file(s) are missing
